custom url - strip whitespaces fix custom validation layout

--- a/src/app/datacheck/import/import.component.less
+++ b/src/app/datacheck/import/import.component.less
@@ -302,6 +302,7 @@
   margin-top: 32px;
 
   &.custom-filter {
+    margin-top: 103px;
     .filters-content {
       overflow-y: scroll;
     }
